<resources>
    <string name="app_name">深财·探股</string>
    <string name="url">http://hq.sinajs.cn/list=</string>
    <string name="zntg">智能投顾</string>
    <string name="today_trend_str">昨日预测</string>
    <string name="nextday_predict_str">明日预测</string>
    <string name="usercenter">个人中心</string>
    <string name="help_str">帮助与反馈</string>
    <string name="about_str">关于</string>
    <string name="userinfo_str">个人资料</string>
    <string name="shenshi_str">深市</string>
    <string name="chuangye_str">创业</string>
    <string name="hu_str">沪A</string>
    <string name="predict_str">预测股</string>
    <string name="other_str">其他</string>
    <string name="zixuan_str">自选</string>
    <string name="meigu_str">美股</string>
    <string name="share_code">股票/代码</string>
    <string name="change_rate_str">涨跌幅</string>
    <string name="current_price">当前价</string>
    <string name="action_settings">Settings</string>
    <string name="spcy_str">昨日预测</string>
    <string name="cryc_str">明日预测</string>
    <string name="gm_str">实战收益</string>
    <string name="login_str">个人</string>
    <string name="home_str">首页</string>
    <string name="time_tv_str">今日</string>
    <string name="propose_board_str">次日高点冲破1%</string>
    <string name="input_stock_code_tip_str">请输入股票代码/简拼</string>
    <string name="clear_searchresult_str">清除搜索记录</string>
    <string name="no_stock_str">股票不存在</string>
    <string name="no_stock_tip_str">目前仅支持深沪股票</string>
    <string name="cancel_str">取消</string>
    <string name="confirm_str">确定</string>
    <string name="up_str">涨</string>
    <string name="down_str">跌</string>
    <string name="tomorrow_str">次日</string>
    <string name="yesterday_str">昨日</string>
    <string name="yuce_tv_str">上日预测今日</string>
    <string name="refresh_str">刷新</string>
    <string name="yuce_no_tv_str">交易日13:00后实时预测</string>
    <string name="predict_tip_str">以下是预测在下个交易日股价有较高概率上涨1%的个股，使用深度学习中的有监督学习作为预测依据</string>
    <string name="predict_no_tv_str">交易日13:00-15:00动态预测,当前暂未预测到优选股</string>
    <string name="add_stock_tv_str">暂无股票 点击添加</string>
    <string name="userlogin_str">登录</string>
    <string name="getcode_str">获取验证码</string>
    <string name="inputphone_tip_str">请输入手机号码</string>
    <string name="verifycode_tip_str">请输入短信验证码</string>
    <string name="agree_tip_str">同意智能投顾协议</string>
    <string name="agree_begin_tip_str">点击登录将自动注册，且表示你</string>

    <string name="predict_trade_str">交易预告仅购买用户可见</string>
    <string name="trade_tip_str">敬请期待</string>

    <string name="detectsecurity">正在检测安全支付服务版本</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="ensure">确认</string>
    <string name="cancel">取消</string>
    <string name="home_predict_text">明日高概率上涨个股</string>
</resources>
