<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/common_white"
        android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/linear_zixuan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/zixuan_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zixuan_str"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/zixuan_slide"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_predict"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/predict_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predict_str"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/predict_slide"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/other_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_str"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/other_slide"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>

