<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/bottom_bg_color">

    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/home_button_select"/>
        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/subview_text_red_color"
            android:text="@string/home_str"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/spcy_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/spcy_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/spcy_button"/>
            <TextView
                android:id="@+id/spcy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text_color"
                android:text="@string/spcy_str"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cryc_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cryc_img"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/cryc_button"/>
            <TextView
                android:id="@+id/cryc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text_color"
                android:text="@string/cryc_str"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gm_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/gm_img"
                android:layout_width="25dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/case_button"/>
            <TextView
                android:id="@+id/gm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text_color"
                android:text="@string/gm_str"/>
        </LinearLayout>
<!--    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/login_button"/>
        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_str"/>
    </LinearLayout>-->
    </LinearLayout>

