<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/login_left_view"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_centerVertical="true">
    <ImageView
        android:id="@+id/login_left_iv"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/user_left_icon"
        android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userlogin_str"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textColor="@color/title_color"/>
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:id="@+id/phone_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/phone_img"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/phone_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColorHint="@color/phone_text_hint_color"
            android:textColor="@color/phone_text_color"
            android:hint="@string/inputphone_tip_str"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/phone_iv"/>


        <TextView
            android:id="@+id/getcode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getcode_str"
            android:textSize="16sp"
            android:textColor="@color/common_white"
            android:padding="6dp"
            android:background="@drawable/gray_loginbtn_rect"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/phone_bottomline_color"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:id="@+id/verifycode_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/verifycode_img"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/verifycode_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/phone_text_color"
            android:textColorHint="@color/phone_text_hint_color"
            android:hint="@string/verifycode_tip_str"
            android:layout_toRightOf="@id/verifycode_iv"
            android:layout_centerVertical="true"/>
        
        <ImageView
            android:id="@+id/clear_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/clear_code_img"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/phone_bottomline_color"></View>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:background="@drawable/red_loginbtn_rect"
        android:text="@string/userlogin_str"
        android:textColor="@color/common_white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        <!--<TextView-->
            <!--android:id="@+id/tip_tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/agree_begin_tip_str"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:gravity="center"/>-->
        <TextView
            android:id="@+id/agree_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_tip_str"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

    </RelativeLayout>
</LinearLayout>
