<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_titlebar_bg_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_trend_str"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/common_white"
            android:padding="10dp"/>
        <RelativeLayout
            android:id="@+id/search_icon_img"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/home_search"/>
        </RelativeLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"></View>

    <!--<include layout="@layout/tag_view"></include>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/common_bg">

        <LinearLayout
            android:id="@+id/linear_zixuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/zixuan_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zixuan_str"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/zixuan_slide"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/red_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/bottom_view_top_color"
            android:layout_gravity="center"></View>

        <LinearLayout
            android:id="@+id/linear_predict"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/predict_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predict_str"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/predict_slide"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/red_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:visibility="gone">
            <TextView
                android:id="@+id/other_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_str"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/other_slide"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/red_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/jianyi_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/common_white"
        android:visibility="gone">
        <RelativeLayout
            android:id="@+id/jianyi_oval_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/jianyi_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_white"
                    android:textSize="16sp"
                    android:text="建议"/>
                <TextView
                    android:id="@+id/buy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_white"
                    android:textSize="16sp"
                    android:text="买入"/>
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jianyi_oval_view"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/wenhao_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/jianyi_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/predict_buy_text_color"
                    android:textSize="16sp"
                    android:text="一日短线 | 稳健交易预测模型"/>
                <ImageView
                    android:id="@+id/wenhao_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/jianyi_text_tv"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/wenhao_img"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/cantrade_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/predict_buy_bg_color"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white">
        <LinearLayout
            android:id="@+id/stocklist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/gupiao_Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/common_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_code"
                    android:textSize="16sp"
                    android:textColor="@color/subview_text_color"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:id="@+id/increase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_rate_str"
                    android:textSize="16sp"
                    android:textColor="@color/subview_text_red_color"
                    android:layout_marginRight="30dp"
                    android:drawableRight="@drawable/up_or_down_unselect"
                    android:drawablePadding="3dp"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/increase_text"
                    android:text="@string/current_price"
                    android:textSize="16sp"
                    android:layout_marginRight="45dp"
                    android:drawableRight="@drawable/up_or_down_unselect"
                    android:drawablePadding="3dp"
                    android:textColor="@color/subview_text_color"/>

            </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/gupiao_Relative">

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/stock_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ptr:ptrDrawable="@drawable/default_ptr_flip"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrHeaderBackground="@color/common_white"
        ptr:ptrHeaderTextColor="@color/common_black"
        ></com.handmark.pulltorefresh.library.PullToRefreshListView>



            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/right_layout"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"></RelativeLayout>
        <LinearLayout
            android:id="@+id/add_stock_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center">
            <ImageView
                android:id="@+id/add_img_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/add_stock_icon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_tv_str"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/no_stock_color"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
